# codeforge

./: .gitignore  README.md  _check.py  flow.md  pyproject.toml  requirements.txt
config/: settings.yaml
src/codeforge/: cli.py  config.py  llm.py  sandbox.py  schemas.py
src/codeforge/agents/: adversarial_tester.py  coder.py  evaluator.py  fixer.py  planner.py  tester.py
src/codeforge/graph/: state.py  swarm.py
src/codeforge/memory/: embedder.py  qdrant_store.py
src/codeforge/metrics/: __init__.py  ast_diff.py  patch_efficiency.py  sycophancy.py
tests/: test_sandbox.py
