[project]
name = "codeforge"
version = "0.1.0"
description = "Autonomous 6-stage coding swarm with LangGraph, Qdrant, and deepeval"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.50",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-community>=0.3.0",
  "openai>=1.40.0",
  "qdrant-client>=1.10.0",
  "deepeval>=2.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
  "tenacity>=8.5.0",
  "rich>=13.7.0",
  "typer>=0.12.5",
  "tiktoken>=0.7.0",
  "sentence-transformers>=3.0.0",
  # Added sandbox dependencies
  "pytest>=8.0.0",
  "pytest-timeout>=2.3.0",
  "pytest-json-report>=1.5.0",
]

[project.scripts]
codeforge = "codeforge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codeforge"]